# gapstars-ai-hackathon

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: rules.json  tasks.json  teams.json
data/: runs.db
docs/: bug_triage_design.md  design.md
examples/: cv_example.txt  jd_example.md
src/bug_triage/: __init__.py  auth.py  chat.py  cli.py  config.py  db.py  jobs.py  models.py  pipeline.py  pipeline_events.py  rules.py  server.py
src/bug_triage/agents/: __init__.py  _factory.py  analyzer.py  artifact.py  parser.py  triage.py
src/bug_triage/prompts/: __init__.py
src/bug_triage/prompts/analyzer/: v1.md  v2.md
src/bug_triage/prompts/artifact/: v1.md  v2.md
src/bug_triage/prompts/parser/: v1.md  v2.md
src/bug_triage/prompts/triage/: v1.md  v2.md
src/bug_triage/static/: index.html
src/cv_screener/: __init__.py  auth.py  chat.py  cli.py  db.py  models.py  pipeline.py  pipeline_events.py  server.py  tools.py
src/cv_screener/agents/: __init__.py  _factory.py  aggregator.py  communication.py  education.py  experience.py  parser.py  red_flags.py  skills.py
src/cv_screener/static/: add_issue.html  agent_progress.html  index.html
src/ui/static/: bug_summary.html  index.html  login.html
