[project]
name = "bug-triage"
version = "0.1.0"
description = "Multi-agent bug triage system using Pydantic AI + Together AI"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=0.0.20",
    "pydantic>=2.7",
    "litellm>=1.50",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bug_triage"]

[project.scripts]
bug-triage = "bug_triage.cli:app"
